# parry

./: .gitignore  .gitleaks.toml  .taplo.toml  Cargo.toml  LICENSE-LLAMA  README.md  flake.nix  justfile  typos.toml
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.github/workflows/: check.yml  release.yaml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  decode.rs  error.rs  lib.rs  secrets.rs  substring.rs  unicode.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  lib.rs  protocol.rs  scan_cache.rs  server.rs  transport.rs
crates/daemon/tests/: e2e.rs
crates/exfil/: Cargo.toml
crates/exfil/src/: bash.rs  consts.rs  elixir.rs  groovy.rs  interpreter.rs  javascript.rs  kotlin.rs  lang.rs  lib.rs  lua.rs  nix.rs  obfuscation.rs  patterns.rs  perl.rs  php.rs  powershell.rs  python.rs  r.rs  ruby.rs  scala.rs  util.rs
crates/hook/: Cargo.toml
crates/hook/src/: cache.rs  claude_md.rs  guard.rs  lib.rs  post_tool_use.rs  pre_tool_use.rs  project_audit.rs  taint.rs
crates/hook/tests/: audit_e2e.rs  e2e.rs
crates/ml/: Cargo.toml
crates/ml/benches/: inference.rs
crates/ml/src/: backend.rs  candle.rs  chunker.rs  lib.rs  model.rs  onnx.rs
examples/: models.toml  patterns.toml
nix/: hm-module.nix  onnxruntime.nix
src/: cli.rs  config.rs  daemon.rs  error.rs  guard.rs  hook.rs  lib.rs  main.rs  model.rs  scan.rs  taint.rs
src/daemon/: client.rs  protocol.rs  server.rs  transport.rs
src/hook/: post_tool_use.rs  pre_tool_use.rs
src/scan/: chunker.rs  decode.rs  exfil.rs  ml.rs  regex.rs  secrets.rs  substring.rs  unicode.rs
src/scan/exfil/: julia.rs  lang.rs
src/scan/ml/: backend.rs  candle.rs  mod.rs  onnx.rs
