[package]
name = "parry-cli"
version = "0.1.0"
edition = "2021"
description = "Prompt injection scanner — substring, unicode, secrets, and ML detection"
license = "MIT"
repository = "https://github.com/vaporif/parry"

[[bin]]
name = "parry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
aho-corasick = "1"
unicode-general-category = "1"
unicode-normalization = "0.1"
unicode_skeleton = "0.1"
data-encoding = "2"
percent-encoding = "2"
html-escape = "0.2"
eyre = "0.6"
redb = "2"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
# tree-sitter-perl requires 0.26, skipped
tree-sitter-lua = "0.4"
tree-sitter-powershell = "0.25"
# tree-sitter-r requires 0.26, checking...
tree-sitter-elixir = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-groovy = "0.1"
tree-sitter-scala = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-perl = "1.1"
tree-sitter-r = "1.2"

bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.4", features = ["ureq", "rustls-tls"] }

# ML backends (optional)
ort = { version = "2.0.0-rc.11", features = ["ndarray", "load-dynamic"], optional = true }
ndarray = { version = "0.17", optional = true }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }

[features]
default = ["onnx"]
onnx = ["dep:ort", "dep:ndarray"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]

[dev-dependencies]
tempfile = "3"

[lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
