[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vaporif/parry"

[workspace.dependencies]
# Internal crates
parry-core = { path = "crates/core" }
parry-ml = { path = "crates/ml" }
parry-exfil = { path = "crates/exfil" }
parry-daemon = { path = "crates/daemon" }
parry-hook = { path = "crates/hook" }

# Core dependencies
eyre = "0.6"
thiserror = "2"
regex = "1"
aho-corasick = "1"
unicode-general-category = "1"
unicode-normalization = "0.1"
unicode_skeleton = "0.1"
data-encoding = "2"
percent-encoding = "2"
html-escape = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Directories
dirs = "6"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Tree-sitter (exfil)
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.4"
tree-sitter-powershell = "0.25"
tree-sitter-elixir = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-groovy = "0.1"
tree-sitter-scala = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-perl = "1.1"
tree-sitter-r = "1.2"
tree-sitter-nix = "0.3"

# ML dependencies
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
hf-hub = { version = "0.4", features = ["ureq", "rustls-tls"] }

# ONNX backend (optional)
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray"] }
ndarray = "0.17"

# Candle backend (optional)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# Daemon/async
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Hook/storage
redb = "3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev dependencies
tempfile = "3"

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
