[package]
name = "parry-core"
description = "Core scanning (unicode, substring, secrets, decode) - no ML, no async"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
regex.workspace = true
aho-corasick.workspace = true
unicode-general-category.workspace = true
unicode-normalization.workspace = true
unicode_skeleton.workspace = true
data-encoding.workspace = true
percent-encoding.workspace = true
html-escape.workspace = true
clap = { workspace = true, optional = true }

[features]
default = []
clap = ["dep:clap"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
