[package]
name = "parry-hook"
description = "Claude Code hook integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
parry-core.workspace = true
parry-exfil.workspace = true
parry-daemon.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
redb.workspace = true
tracing.workspace = true

[features]
default = ["candle"]
onnx = ["parry-daemon/onnx"]
onnx-fetch = ["parry-daemon/onnx-fetch"]
onnx-coreml = ["parry-daemon/onnx-coreml"]
candle = ["parry-daemon/candle"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
